--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,7 @@
+:root {
+  --background-primary: #1d2128;
+}
+
 body {
   height: 100vh;
   padding: 0;
@@ -5,22 +9,35 @@ body {
   display: grid;
   grid-template-columns: repeat(5, 1fr);
   grid-template-rows: 70px 1fr;
+  background-color: var(--background-primary);
+  color: white;
+  border: 1px solid #e1e1e1;
 }
 
 header {
   grid-row-start: 1/2;
   grid-column: 1/-1;
+  border: 1px solid #e1e1e1;
+  padding: 1rem;
+  display: flex;
+  align-items: center;
 }
 
 main {
   grid-column: 2/-1;
   padding: 20px;
+  border: 1px solid #e1e1e1;
 }
 
 form {
+  border: 1px solid white;
   width: 600px;
   margin: 1.5rem auto;
   padding: 20px;
+  border: 1px solid #e1e1e1;
+  border-radius: 8px;
+  color: black;
+  background-color: white;
 }
 
 form input[type="text"],
@@ -53,9 +70,29 @@ form textarea {
 .cardNote {
   padding: 20px;
   background-color: white;
+  color: black;
+  border-radius: 8px;
 }
 
-.containerNotes {
+.containerNotes,
+.containerTrash {
   display: grid;
-  grid-template-columns: repeat(5, 1fr);
+  grid-template-columns: repeat(auto-fill, 200px);
+}
+
+.colorContainer {
+  display: none;
+  grid-template-columns: repeat(5, 25px);
+}
+
+.block {
+  display: grid;
+}
+
+.radiusColor {
+  border-radius: 50%;
+  border: 1px solid black;
+  /* border-color: black; */
+  height: 25px;
+  width: 25px;
 }
