--- a/css/style.css
+++ b/css/style.css
@@ -78,6 +78,7 @@ form textarea {
 .containerTrash {
   display: grid;
   grid-template-columns: repeat(auto-fill, 200px);
+  gap: 20px;
 }
 
 .colorContainer {
